# satcomp

./: LICENSE  README.md  config.yaml  pyproject.toml
benchmarks/toy/: sat1.cnf  sat2.cnf  unsat1.cnf
satcomp/: __main__.py  cli.py  config.py  db.py  models.py  parsers.py  report.py  runner.py  stats.py  utils.py  webapp.py
satcomp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
satcomp/templates/: index.html  live.html  report.html  report.md  run.html
solvers/: covertrace_sat.yaml  kissat.yaml  slime.yaml
tests/: test_db.py  test_parsers.py  test_runner.py  test_utils.py
